--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,39 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer components {
+  .navbar-mobile {
+    @apply translate-x-[50rem] md:translate-y-0;
   }
-  body {
-    color: white;
-    background: black;
+  .burger {
+    @apply grid w-5 h-1 transform
+    transition duration-[0.5s] 
+    bg-gray-800;
   }
+  .burger-active {
+    @apply bg-red-700;
+  }
+  .burger-active:nth-child(1) {
+    @apply rotate-[50deg] translate-y-[4px];
+  }
+  .burger-active:nth-child(3) {
+    @apply rotate-[-50deg] translate-y-[-4px];
+  }
+  .navbar-items {
+    @apply cursor-pointer md:text-[20px] lg:text-2xl 
+    transition ease-in-out duration-[.400] rounded-md
+    md:w-[15rem] md:h-[5rem] flex items-center justify-center;
+  }
+  .navbar-items:hover {
+    @apply bg-gray-600;
+  }
+  .dropdown-items{
+    display: none;
+    position: absolute;
+    min-width: 100px;
+    font-size: 10px;
+  }
+ 
+
 }
