--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
 
 @layer components {
   .navbar-mobile {
